--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
     <div id="top" class="parcours row">
         <div class="vert col-2 border-start border-5 border-dark"></div>
         <div class="col-10 m-0 p-0">
-            <p class="border-bottom border-end border-start border-5 border-dark p-4 fs-5 ">Bienvenue dans mon portfolio Bootstrap, un espace dédié à mes créations graphiques personelles et professionnelles.</p>
+            <p class="border-bottom border-end border-start border-5 border-dark p-4 fs-4">Bienvenue dans mon portfolio Bootstrap, un espace dédié à mes créations graphiques personelles et professionnelles.</p>
         </div>
     </div>
 <!--ALTERNANCE-->
     <div class="parcours row">
         <div class="vert col-2 border-bottom border-start border-5 border-dark"></div> 
         <div class="col-10 m-0 p-0">
-            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5"><strong>-! À la recherche d'un contrat d'apprentissage en motion design<strong>!-</strong> Septembre 2024 : Certification profesionnelle Graphiste Motion Designer à Gobelins Paris</p>
+            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-4"><strong>-! À la recherche d'un contrat d'apprentissage en motion design<strong> !-</strong> <br>
+                Septembre 2024 : Certification profesionnelle Graphiste Motion Designer à Gobelins Paris</p>
         </div>
     </div>
    
@@ -65,7 +66,7 @@
         <span class="p-0 m-00 violet col-2 border-start border-end border-5 border-dark"></span>
         <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Webdesign & Graphisme</h3>
-            <p>Créer et affirmer l'identité de marque de Mona Margaux.<br>
+            <p class="fs-4">Créer et affirmer l'identité de marque de Mona Margaux.<br>
             Conception de la charte graphique et de support de communication.<br>
             Maquettage et intégration d'un site web marchand : <a class="MM" target="_blank" href="https://monamargaux.com">monamargaux.com</a>.</p>
         </div>
@@ -85,7 +86,7 @@
         <span class="violet col-2 p-0 m-0 border-start border-end border-5 border-dark"></span>
         <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Identitié visuelle</h3>
-            <p>Brief : créer un logotype avec la typographie Glacial Indifférence pour l'entreprise Moga Studio.</p><br>
+            <p class="fs-4">Brief : créer un logotype avec la typographie Glacial Indifférence pour l'entreprise Moga Studio.</p><br>
         </div>
     </section>
     <!--Mockup-->
@@ -178,7 +179,7 @@
         <section class="p-0 m-0 row col-12">
             <span class="p-0 m-00 violet col-3 border-start border-end border-5 border-dark"></span>
             <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
-                <p>Créations spontanées entre juillet 2022 et avril 2023.</p>
+                <p p class="fs-4">Créations spontanées entre juillet 2022 et avril 2023.</p>
             </div>
         </section>
     
@@ -267,7 +268,7 @@
         <section class="p-0 m-0 row col-12">
             <span class="p-0 m-0 violet col-3 border-start border-end border-5 border-dark"></span>
             <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
-                <p>Création de texture en post-production, réalisé en 2022.</p>
+                <p class="fs-4">Création de texture en post-production, réalisé en 2022.</p>
             </div>
         </section>
         <!--Ceci est un exercice -->
@@ -298,7 +299,7 @@
         <div class="jaune col-2 border-start border-end border-5 border-dark"></div>
         <div class="col-8 border-end border-5 border-dark text-start">
             <h3 class="mt-5">Graphiste & Motion Designer</h3>
-            <p class="fs-6">Implanté à Paris et diplômé après deux expériences réussies en Web puis en Print, je cherche à compléter ma palette de compétences techniques avec le Motion Design. Je suis également passionné par la photographie minimale.</p>
+            <p class="fs-4">Implanté à Paris et diplômé après deux expériences réussies en Web puis en Print, je cherche à compléter ma palette de compétences techniques avec le Motion Design. Je suis également passionné par la photographie minimale.</p>
             <a class="btn btn-primary m-4" href="cv.html" role="button">Voir mon CV</a>
         </div>
         <div class="jaune col-2 d-flex align-items-center border-end border-5 border-dark"><img src="assets/photo_aPropos/sélection02.jpg" alt="portrait de Jean-Baptiste Charlemagne" class="img-fluid p-2"></div>
